[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Enemies/Projectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemies/IceBeam.gd" type="Script" id=2]
[ext_resource path="res://Fonts/FreePixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Spells/IceBolt.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Particles.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.15752, 14.846 )

[sub_resource type="Animation" id=2]
resource_name = "FrostBolt"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Projectile:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 25.0
gravity = Vector3( 0, -10, 0 )
initial_velocity = 35.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="IceBeam" instance=ExtResource( 1 )]
script = ExtResource( 2 )
velocity = Vector2( 0, 100 )

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( 0, 16.0564 )
shape = SubResource( 1 )

[node name="Projectile" parent="." index="1"]
position = Vector2( 0, 9.48941 )
scale = Vector2( 1, 1 )
texture = ExtResource( 4 )
vframes = 2

[node name="VisibilityNotifier2D" parent="." index="2"]
position = Vector2( 0.0589907, 15.4656 )
scale = Vector2( 0.309792, 1.53398 )

[node name="Animator" type="AnimationPlayer" parent="." index="3"]
anims/FrostBolt = SubResource( 2 )

[node name="DamageLabel" type="Label" parent="." index="4"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -19.0
margin_top = 50.5024
margin_right = 21.0
margin_bottom = 58.5024
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "11111"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathTimer" type="Timer" parent="." index="5"]
wait_time = 0.1

[node name="Particles" type="Particles2D" parent="." index="6"]
position = Vector2( 0, -0.631386 )
amount = 18
process_material = SubResource( 4 )
texture = ExtResource( 5 )
[connection signal="timeout" from="DeathTimer" to="." method="onDeathTimeout"]
